Prepare report for submission

--- a/code/notebooks/lotka_volterra/Gradient_free_elliptic_distributions.ipynb
+++ b/code/notebooks/lotka_volterra/Gradient_free_elliptic_distributions.ipynb
@@ -134,7 +134,7 @@
      "text": [
       "/home/artem/Study/KCL/ST50 Project/code/.venv/lib/python3.12/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
       "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 45441 instead\n",
+      "Hosting the HTTP server on port 36391 instead\n",
       "  warnings.warn(\n"
      ]
     },
@@ -145,7 +145,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-b6e14650-6aab-11ef-9dca-94de80e86035</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-cdedae1e-6b76-11ef-a435-94de80e86035</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -158,7 +158,7 @@
        "        \n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:45441/status\" target=\"_blank\">http://127.0.0.1:45441/status</a>\n",
+       "                    <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:36391/status\" target=\"_blank\">http://127.0.0.1:36391/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\"></td>\n",
        "            </tr>\n",
@@ -176,11 +176,11 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">LocalCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">2ba96263</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">c06d248b</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:45441/status\" target=\"_blank\">http://127.0.0.1:45441/status</a>\n",
+       "                    <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:36391/status\" target=\"_blank\">http://127.0.0.1:36391/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
        "                    <strong>Workers:</strong> 4\n",
@@ -213,11 +213,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-73aad4d4-1860-4207-a246-e8128534b2ef</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-99522138-3b1c-4e51-8fdc-d8be5d0890cb</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://127.0.0.1:42503\n",
+       "                        <strong>Comm:</strong> tcp://127.0.0.1:43359\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 4\n",
@@ -225,7 +225,7 @@
        "                </tr>\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:45441/status\" target=\"_blank\">http://127.0.0.1:45441/status</a>\n",
+       "                        <strong>Dashboard:</strong> <a href=\"http://127.0.0.1:36391/status\" target=\"_blank\">http://127.0.0.1:36391/status</a>\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Total threads:</strong> 16\n",
@@ -259,7 +259,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:32815\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:36623\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -267,7 +267,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:46041/status\" target=\"_blank\">http://127.0.0.1:46041/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:39349/status\" target=\"_blank\">http://127.0.0.1:39349/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -275,13 +275,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:36739\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:41097\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-5xciuc02\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-b_t87c5s\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -304,7 +304,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:34045\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:37319\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -312,7 +312,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:39719/status\" target=\"_blank\">http://127.0.0.1:39719/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:36657/status\" target=\"_blank\">http://127.0.0.1:36657/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -320,13 +320,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:42613\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:43679\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-v6yj_pno\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-xhaf2434\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -349,7 +349,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:41147\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:38853\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -357,7 +357,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:39683/status\" target=\"_blank\">http://127.0.0.1:39683/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:42585/status\" target=\"_blank\">http://127.0.0.1:42585/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -365,13 +365,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:41273\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:38959\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-0tcymiuw\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-tf9lc_f7\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -394,7 +394,7 @@
        "                <table style=\"width: 100%; text-align: left;\">\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Comm: </strong> tcp://127.0.0.1:37225\n",
+       "                            <strong>Comm: </strong> tcp://127.0.0.1:37227\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Total threads: </strong> 4\n",
@@ -402,7 +402,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:33499/status\" target=\"_blank\">http://127.0.0.1:33499/status</a>\n",
+       "                            <strong>Dashboard: </strong> <a href=\"http://127.0.0.1:37729/status\" target=\"_blank\">http://127.0.0.1:37729/status</a>\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\">\n",
        "                            <strong>Memory: </strong> 1.86 GiB\n",
@@ -410,13 +410,13 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td style=\"text-align: left;\">\n",
-       "                            <strong>Nanny: </strong> tcp://127.0.0.1:40335\n",
+       "                            <strong>Nanny: </strong> tcp://127.0.0.1:46883\n",
        "                        </td>\n",
        "                        <td style=\"text-align: left;\"></td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <td colspan=\"2\" style=\"text-align: left;\">\n",
-       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-zrdm384y\n",
+       "                            <strong>Local directory: </strong> /tmp/dask-scratch-space/worker-lwqgfrib\n",
        "                        </td>\n",
        "                    </tr>\n",
        "\n",
@@ -443,12 +443,20 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:42503' processes=4 threads=16, memory=7.45 GiB>"
+       "<Client: 'tcp://127.0.0.1:43359' processes=4 threads=16, memory=7.45 GiB>"
       ]
      },
      "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/artem/Study/KCL/ST50 Project/code/.venv/lib/python3.12/site-packages/distributed/system_monitor.py:201: UserWarning: timed out waiting on channel\n",
+      "  self._gilknocker.reset_contention_metric()\n"
+     ]
     }
    ],
    "source": [
@@ -1009,9 +1017,9 @@
     {
      "data": {
       "text/plain": [
-       "array([210376,  58196, 183198, 475597, 263458, 492726, 159025,  53236,\n",
-       "       312428, 490046, 247516, 427710, 431863, 228601, 204087, 293372,\n",
-       "       131045,   7186, 467381,  73201], dtype=uint32)"
+       "array([367968, 278021, 283038, 149313, 181322, 263458,  12999, 312428,\n",
+       "       210376, 404701,  80507, 490046, 475597, 305430, 373009, 283038,\n",
+       "       427710, 401943, 367968, 294903], dtype=uint32)"
       ]
      },
      "execution_count": 36,
@@ -1049,7 +1057,40 @@
    "execution_count": 38,
    "id": "fcd4fa5a-dc79-4f46-b7ab-2e0b99b177db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:utils.caching:Recalculating batch: rw_gf_adjusted_gaussian_idx\n",
+      "/home/artem/Study/KCL/ST50 Project/code/.venv/lib/python3.12/site-packages/distributed/client.py:3164: UserWarning: Sending large graph of size 95.37 MiB.\n",
+      "This may cause some slowdown.\n",
+      "Consider scattering data ahead of time and using futures.\n",
+      "  warnings.warn(\n",
+      "/home/artem/Study/KCL/ST50 Project/code/.venv/lib/python3.12/site-packages/distributed/system_monitor.py:201: UserWarning: timed out waiting on channel\n",
+      "  self._gilknocker.reset_contention_metric()\n",
+      "/home/artem/git/stein_thinning/stein_thinning/thinning.py:126: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
+      "  warnings.warn(f'log_q differs from log_p by more than {WEIGHT_SCALE_THRESHOLD} - consider using q that matches target better')\n",
+      "/home/artem/git/stein_thinning/stein_thinning/thinning.py:126: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
+      "  warnings.warn(f'log_q differs from log_p by more than {WEIGHT_SCALE_THRESHOLD} - consider using q that matches target better')\n",
+      "/home/artem/git/stein_thinning/stein_thinning/thinning.py:126: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
+      "  warnings.warn(f'log_q differs from log_p by more than {WEIGHT_SCALE_THRESHOLD} - consider using q that matches target better')\n",
+      "/home/artem/git/stein_thinning/stein_thinning/thinning.py:126: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
+      "  warnings.warn(f'log_q differs from log_p by more than {WEIGHT_SCALE_THRESHOLD} - consider using q that matches target better')\n",
+      "INFO:utils.caching:Calculation time for rw_gf_adjusted_gaussian_idx: 4307.116692 s\n",
+      "DEBUG:utils.caching:Persisting calculation result: rw_gf_adjusted_gaussian_idx_0\n",
+      "DEBUG:utils.caching:Writing /home/artem/Study/KCL/ST50 Project/data/generated/rw_gf_adjusted_gaussian_idx_0.npy\n",
+      "DEBUG:utils.caching:Persisting calculation result: rw_gf_adjusted_gaussian_idx_1\n",
+      "DEBUG:utils.caching:Writing /home/artem/Study/KCL/ST50 Project/data/generated/rw_gf_adjusted_gaussian_idx_1.npy\n",
+      "DEBUG:utils.caching:Persisting calculation result: rw_gf_adjusted_gaussian_idx_2\n",
+      "DEBUG:utils.caching:Writing /home/artem/Study/KCL/ST50 Project/data/generated/rw_gf_adjusted_gaussian_idx_2.npy\n",
+      "DEBUG:utils.caching:Persisting calculation result: rw_gf_adjusted_gaussian_idx_3\n",
+      "DEBUG:utils.caching:Writing /home/artem/Study/KCL/ST50 Project/data/generated/rw_gf_adjusted_gaussian_idx_3.npy\n",
+      "DEBUG:utils.caching:Persisting calculation result: rw_gf_adjusted_gaussian_idx_4\n",
+      "DEBUG:utils.caching:Writing /home/artem/Study/KCL/ST50 Project/data/generated/rw_gf_adjusted_gaussian_idx_4.npy\n"
+     ]
+    }
+   ],
    "source": [
     "#rw_gf_adjusted_gaussian_idx.recalculate(True);"
    ]
@@ -1071,7 +1112,7 @@
     {
      "data": {
       "text/plain": [
-       "263.2648072242737"
+       "4602.935484409332"
       ]
      },
      "execution_count": 39,
