--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -945,3 +945,61 @@
   langid = {english},
   file = {/home/artem/Zotero/storage/K4XUG4L4/Gabor Szekely - 2002 - E-statistics The Energy of Statistical Samples.pdf}
 }
+
+@article{owenStatisticallyEfficientThinning2017,
+  title = {Statistically {{Efficient Thinning}} of a {{Markov Chain Sampler}}},
+  author = {Owen, Art B.},
+  year = {2017},
+  month = jul,
+  journal = {Journal of Computational and Graphical Statistics},
+  volume = {26},
+  number = {3},
+  pages = {738--744},
+  issn = {1061-8600, 1537-2715},
+  doi = {10.1080/10618600.2017.1336446},
+  urldate = {2024-09-02},
+  langid = {english},
+  file = {/home/artem/Zotero/storage/IRWQ78RA/Owen - 2017 - Statistically Efficient Thinning of a Markov Chain.pdf}
+}
+
+@misc{fearnheadScalableMonteCarlo2024,
+  title = {Scalable {{Monte Carlo}} for {{Bayesian Learning}} (Pre-Print)},
+  author = {Fearnhead, Paul and Nemeth, Christopher and Oates, Chris J. and Sherlock, Chris},
+  year = {2024},
+  publisher = {arXiv},
+  doi = {10.48550/ARXIV.2407.12751},
+  urldate = {2024-09-04},
+  abstract = {This book aims to provide a graduate-level introduction to advanced topics in Markov chain Monte Carlo (MCMC) algorithms, as applied broadly in the Bayesian computational context. Most, if not all of these topics (stochastic gradient MCMC, non-reversible MCMC, continuous time MCMC, and new techniques for convergence assessment) have emerged as recently as the last decade, and have driven substantial recent practical and theoretical advances in the field. A particular focus is on methods that are scalable with respect to either the amount of data, or the data dimension, motivated by the emerging high-priority application areas in machine learning and AI.},
+  copyright = {Creative Commons Attribution 4.0 International},
+  keywords = {Computation (stat.CO),FOS: Computer and information sciences,Machine Learning (cs.LG),Machine Learning (stat.ML),Methodology (stat.ME)}
+}
+
+@book{lotkaElementsPhysicalBiology1925,
+  title = {Elements of {{Physical Biology}}},
+  author = {Lotka, Alfred J.},
+  year = {1925},
+  publisher = {{Williams and Wilkins}},
+  address = {London}
+}
+
+@article{volterraVariazioniFluttuazioniNumero1926,
+  title = {Variazioni e Fluttuazioni Del Numero d'individui in Specie Animali Conviventi},
+  author = {Volterra, Vito},
+  year = {1926},
+  journal = {Memoria della Reale Accademia Nazionale dei Lincei},
+  volume = {2},
+  pages = {31--113}
+}
+
+@book{rasmussenGaussianProcessesMachine2006,
+  title = {Gaussian Processes for Machine Learning},
+  author = {Rasmussen, Carl Edward and Williams, Christopher K. I.},
+  year = {2006},
+  series = {Adaptive Computation and Machine Learning},
+  publisher = {MIT Press},
+  address = {Cambridge, Mass},
+  isbn = {978-0-262-18253-9},
+  lccn = {QA274.4 .R37 2006},
+  keywords = {Data processing,Gaussian processes,Machine learning,Mathematical models},
+  annotation = {OCLC: ocm61285753}
+}
